# ckanext-datagovuk

./: .dockerignore  .gitignore  .travis.yml  CLAUDE.md  Dockerfile  IMPORT.md  Jenkinsfile  LINTING.md  MANIFEST.in  Makefile  Procfile  README.md  README.rst  build-config.yaml  ckan.ini  dev-requirements.txt  gunicorn_config.py  maintenance.html  migrations-2.8.md  production.ini  pycsw.Dockerfile  pyproject.toml  requirements-2.10.txt  requirements.txt  run-single-test.sh  run-tests.sh  setup.cfg  setup.py  test-jenkins.ini  test.ini
.github/: actionlint.yml
docker/: .env.example  bootstrap.sh  build-ckan.sh  build-image.sh  compose.yml  create-pr.sh  docker-compose-2.10.yml  docker-compose-2.9.3-full.yml  docker-compose-2.9.3.yml  docker-compose-2.9.5.yml  docker-compose-2.9.7-full.yml  docker-compose-2.9.7.yml  docker-compose-2.9.9-full.yml  docker-compose-2.9.9.yml  reset-docker.sh  start-ckan.sh
docs/: migration_runsheet.md  solr_manual_updates.md
import/: clean_export.py  compare_ckan_data.py  incremental_update.py  migrate_datasets.py  migrate_harvest_sources.py  migrate_users.py
migrations/: 001_bytemark_to_govuk.sql  002_fix_organograms.sql  003_update_environment_agency_contact_email.sql  004_resolve_harvest_source_types.sql  005_update_resource_extras.sql  006_set_duplicate_datasets_deleted.sql  007_remove_related_tables.sql  008_remove_harvest_coupled_resource.sql  009_delete_harvest_object_records.sql  010_reset_os_roads_updated_at.sql
tests/: conftest.py  test_helpers.py  test_inventory.py  test_package.py  test_paths.py  test_pii_helpers.py  (+3 more)
(+194 files in other folders)
